2022-10-03  1.08  (Phil M Perry)   UNRELEASED

* test 'center' style, implement (ragged) 'left' and 'right'. defaults to
  'justify'.

* look at fixed pitch/char hyphenated word overhangs right margin (#10)

* irregular column shapes w/ leading, HS wrapper

* new and better hyphenation library (#9)

2022-10-03  1.07  (Phil M Perry)

  lib/Text/KnuthPlass.xs, lib/Text/KnuthPlass.pm, t/01-nodes.t
   Fix mishandling of line length array in XS code (was only looking at first 
    two elements), #7. Remove elements as used, and return to application.

  examples/text/KP.pl (new), examples/text/Flatland.pl (new), 
    examples/text/Triangle.pl (new), MANIFEST, tools/3_examples.pl
   Add more examples, this time for text file (.txt) output (constant width).

  examples/PDF/Flatland.pl (new), examples/PDF/Triangle.pl (new),
    examples/PDF/KP.pl, MANIFEST, tools/3_examples.pl
   Add more examples of PDF document creation, and update KP example.

  lib/Text/KnuthPlass.pm, lib/Text/KnuthPlass.xs, examples/*, t/01-nodes.t
   Pass paragraph indentation (or negative outdent amount) to KP algorithm, so
    can start even the first line of paragraph at same x value every time. 
    Allow per-paragraph setting of indentation via typeset() method and the new
    line_lengths() method. For compatibility with older applications, the
    default indentation is 0.

  lib/Text/KnuthPlass.pm, README.md
   Add flag to ignore XS code (whether or not successfully installed) and just 
    run pure Perl. This is good for debugging, watching paint dry, or torturing
    your users! In other words, pure Perl is quite slow.

  lib/Text/KnuthPlass.pm 
   Add flag for minimum 3 letter suffix in hyphenation (not sure Text::Hyphen
    is obeying it).

  META.json, MANIFEST add META.json

  examples/PDF/KP.pl sample put all three texts on one page

  LICENSE, MANIFEST  add separate LICENSE file

  META.yml  add minimum Perl version (5.8.1)
