@@ -1,5 +1,6 @@
 Build.PL
 Changes
+CONTRIBUTING.md
 MANIFEST
 README.md
 LICENSE
@@ -13,8 +14,8 @@ lib/Text/typemap
 t/00-load.t
 t/01-nodes.t
 t/02-javascript.t
-t/pod-coverage.t
-t/pod.t
+xt/pod-coverage.t
+xt/pod.t
 tools/1_pc.pl
 tools/2_t-tests.pl
 tools/3_examples.pl
